<resources>
    <string name="app_name">GADS Leaderboard</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="email_address">Email Address</string>
    <string name="github_link">Project on GITHUB (link)</string>
    <string name="submit">Submit</string>
    <string name="learner_details">country and hours</string>
    <string name="learner_name">Learner name</string>
</resources>
