<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_app">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="64dp">
        <ImageButton
            android:id="@+id/back_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:background="#00FFFFFF"
            android:layout_margin="16dp"
            android:scaleType="fitXY"
            android:src="@drawable/arrow" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:padding="16dp"
            android:src="@drawable/toolbar_logo"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="Project Submission"
        android:textColor="@color/colorOrange"
        android:textSize="24sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/separator"
        android:padding="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginBottom="50dp"
        android:baselineAligned="false"
        android:orientation="horizontal">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/text_input_background"
            android:hint="@string/first_name"
            android:inputType="text"
            android:padding="16dp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@drawable/text_input_background"
            android:hint="@string/last_name"
            android:inputType="text"
            android:padding="16dp"
            android:textStyle="bold" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="154px"
        android:background="@drawable/text_input_background"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputGithubLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="90dp"
        android:background="@drawable/text_input_background"
        android:hint="@string/github_link"
        android:inputType="textImeMultiLine"
        android:padding="16dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="180dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:background="@drawable/btn_gradient"
        android:text="@string/submit"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@null" />
</LinearLayout>